--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,6 +15,7 @@
             android:id="@+id/phone_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackground"
             android:padding="24dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -40,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_24dp"
+            android:background="?attr/selectableItemBackground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_notification"
@@ -90,6 +92,7 @@
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="20dp"
+            android:background="?attr/selectableItemBackground"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
@@ -106,6 +109,7 @@
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
+            android:background="?attr/selectableItemBackground"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
@@ -122,6 +126,7 @@
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
+            android:background="?attr/selectableItemBackground"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
@@ -138,6 +143,7 @@
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
+            android:background="?attr/selectableItemBackground"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
@@ -154,6 +160,7 @@
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
+            android:background="?attr/selectableItemBackground"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
@@ -170,6 +177,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
             android:layout_marginBottom="@dimen/margin_24dp"
+            android:background="?attr/selectableItemBackground"
             android:drawableStart="@drawable/ic_logout"
             android:drawablePadding="16dp"
             android:fontFamily="sans-serif-medium"
