--- a/app/src/main/res/layout/fragment_registration_selection.xml
+++ b/app/src/main/res/layout/fragment_registration_selection.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_4dp"
             android:layout_marginTop="12dp"
+            android:background="?attr/selectableItemBackground"
             android:padding="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
