--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,7 +32,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:background">@drawable/bg_keyboard_button</item>
-        <item name="android:textSize">32sp</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">@color/balance_fuel_gray</item>
         <item name="android:paddingTop">@dimen/margin_8dp</item>
         <item name="android:paddingBottom">@dimen/margin_8dp</item>
     </style>
