--- a/app/src/main/res/layout/fragment_auth_code.xml
+++ b/app/src/main/res/layout/fragment_auth_code.xml
@@ -116,17 +116,17 @@
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:textAlignment="center"
-        android:textColor="#FF4A4A"
+        tools:text="@string/wrong_format_error"
+        android:textColor="@color/error_red_color"
         app:layout_constraintTop_toBottomOf="@+id/code_inputs_layout" />
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="336dp"
+        android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginBottom="@dimen/margin_48dp"
         android:background="@drawable/bg_intro_btn"
         android:fontFamily="sans-serif-medium"
         android:text="@string/login_btn"
@@ -255,14 +255,13 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/login_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/error_tv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
