--- a/app/src/main/res/layout/fragment_auth_phone.xml
+++ b/app/src/main/res/layout/fragment_auth_phone.xml
@@ -32,7 +32,7 @@
         android:maxLength="18"
         android:maxLines="1"
         android:paddingBottom="@dimen/margin_16dp"
-        android:text="+7 ("
+        android:text="@string/phone_start_symbols"
         android:textColor="@color/gray_intro_text"
         android:textColorHint="@color/grayText"
         android:textCursorDrawable="@drawable/color_cursor"
@@ -51,10 +51,11 @@
         android:layout_height="wrap_content"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:textColor="#FF4A4A"
+        android:textColor="@color/error_red_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phone_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/phone_edit_text"
+        tools:text="@string/wrong_format_error" />
 
     <Button
         android:id="@+id/login_button"
@@ -217,9 +218,9 @@
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/login_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/error_tv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
