--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -175,12 +175,13 @@
             android:id="@+id/exit_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginBottom="@dimen/margin_24dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginBottom="@dimen/margin_16dp"
             android:background="?attr/selectableItemBackground"
             android:drawableStart="@drawable/ic_logout"
             android:drawablePadding="16dp"
             android:fontFamily="sans-serif-medium"
+            android:padding="@dimen/margin_8dp"
             android:text="@string/exit"
             android:textColor="@color/gray_profile"
             android:textSize="20sp"
