--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -172,6 +172,23 @@
             app:layout_constraintTop_toBottomOf="@+id/accounts_and_cards_view" />
 
         <TextView
+            android:id="@+id/message_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/bg_message_counter"
+            android:paddingStart="@dimen/margin_24dp"
+            android:paddingTop="@dimen/margin_8dp"
+            android:paddingEnd="@dimen/margin_24dp"
+            android:paddingBottom="@dimen/margin_8dp"
+            android:textColor="@color/agreement_text_color"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@+id/support_service_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/support_service_view"
+            tools:text="+2" />
+
+        <TextView
             android:id="@+id/exit_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
