added setting bank icon, progress to BalanceFragment

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,7 @@
             android:id="@+id/phone_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackground"
+            android:background="@drawable/bg_transparent_ripple"
             android:padding="24dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -92,7 +92,7 @@
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="20dp"
-            android:background="?attr/selectableItemBackground"
+            android:background="@drawable/bg_transparent_ripple"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
@@ -109,7 +109,7 @@
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
-            android:background="?attr/selectableItemBackground"
+            android:background="@drawable/bg_transparent_ripple"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
@@ -126,7 +126,7 @@
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
-            android:background="?attr/selectableItemBackground"
+            android:background="@drawable/bg_transparent_ripple"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
@@ -143,7 +143,7 @@
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
-            android:background="?attr/selectableItemBackground"
+            android:background="@drawable/bg_transparent_ripple"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
@@ -160,7 +160,7 @@
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
-            android:background="?attr/selectableItemBackground"
+            android:background="@drawable/bg_transparent_ripple"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
