--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -106,6 +106,9 @@
             app:destination="@id/notificationsFragment"
             app:popEnterAnim="@animator/slide_in_top"
             app:popExitAnim="@animator/slide_out_top" />
+        <action
+            android:id="@+id/action_profileFragment_to_chatHistoryFragment"
+            app:destination="@id/chatHistoryFragment" />
     </fragment>
 
     <fragment
