--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -13,7 +13,7 @@
         android:layout_margin="@dimen/margin_16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_checked" />
+        app:srcCompat="@drawable/ic_notification_bage" />
 
     <ImageView
         android:id="@+id/status_image"
