--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,8 +27,10 @@
 
     <color name="registration_white_color">#FDFEFF</color>
 
+    <color name="profile_gradient_light">#16161E</color>
+    <color name="profile_gradient_dark">#151518</color>
+
     <color name="balance_gradient_light">#1D1D23</color>
-    <color name="balance_gradient_dark">#16161E</color>
     <color name="balance_green">#1F924D</color>
     <color name="balance_red">#BD3139</color>
     <color name="balance_fuel_gray">#C1BFBC</color>
